--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <body>
     <div class="main-header">
         <h1>🚀 מדריכים לקלאוד התותח</h1>
-        <p>המקום שלכם לכל הטיפים והטריקים הטכניים • <strong>14 מדריכים מעודכנים</strong></p>
+        <p>המקום שלכם לכל הטיפים והטריקים הטכניים • <strong>17 מדריכים מעודכנים</strong></p>
     </div>
 
     <div class="container">
@@ -456,6 +456,22 @@
                         <div class="guide-category">🤖 בינה מלאכותית</div>
                     </div>
                 </div>
+
+                <div class="guide-card" onclick="showGuide15()">
+                    <div class="guide-header">
+                        <div class="guide-title">🚨 כלי חדש לזיהוי סרטונים מזויפים - DeepGuard</div>
+                        <div class="guide-preview">מערכת חדשנית לזיהוי deepfakes וסרטונים מזויפים עם דיוק של 87-92% - מדריך שימוש ויכולות</div>
+                        <div class="guide-category">🤖 בינה מלאכותית</div>
+                    </div>
+                </div>
+
+                <div class="guide-card" onclick="showGuide17()">
+                    <div class="guide-header">
+                        <div class="guide-title">📚 מדריך על המודלים השונים של GPT</div>
+                        <div class="guide-preview">כי לפעמים אנחנו משתמשים במודל שלא מתאים לנו - מדריך מפורט על כל מודלי GPT ויכולותיהם</div>
+                        <div class="guide-category">🤖 בינה מלאכותית</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -467,6 +483,14 @@
                     <div class="guide-header">
                         <div class="guide-title">🎨 אוסף של 6000 אייקוני תלת-מימד</div>
                         <div class="guide-preview">מאגר ענק של אייקונים תלת-מימדיים בחינם למעצבים - כולל מחולל מותאם אישית</div>
+                        <div class="guide-category">🎨 עיצוב</div>
+                    </div>
+                </div>
+
+                <div class="guide-card" onclick="showGuide16()">
+                    <div class="guide-header">
+                        <div class="guide-title">🎨 מדריך בסיסי למידג'רני</div>
+                        <div class="guide-preview">מתחילים עם מידג'רני ולא יודעים איך? מדריך בסיסי שיעזור לכם לעשות את הצעדים הראשונים</div>
                         <div class="guide-category">🎨 עיצוב</div>
                     </div>
                 </div>
@@ -1202,6 +1226,152 @@
                         <li>פרויקטים גרפיים</li>
                         <li>רשתות חברתיות</li>
                     </ul>
+                </div>
+            `);
+        }
+
+        // המדריכים החדשים - 15, 16, 17
+        function showGuide15() {
+            showModal('🚨 כלי חדש לזיהוי סרטונים מזויפים - DeepGuard', `
+                <h2>🚨 כלי חדש לזיהוי סרטונים מזויפים - DeepGuard</h2>
+
+                <p>ה-DeepGuard הוא כלי שהושק לאחרונה לזיהוי deepfakes וסרטונים מזויפים. הכלי מבצע ניתוח רב-שכבתי של סרטונים.</p>
+
+                <div class="success-section">
+                    <h3>✅ מה הכלי בודק?</h3>
+                    <ul>
+                        <li><strong>מיפוי פנים ותנועות</strong> - ניתוח דפוסי תנועה טבעיים</li>
+                        <li><strong>סנכרון אודיו-ויזואלי</strong> - בדיקת התאמה בין שפתיים לקול</li>
+                        <li><strong>עקביות בין פריימים</strong> - זיהוי חוסר עקביות בווידאו</li>
+                        <li><strong>בדיקת מטאדאטה</strong> - ניתוח מידע טכני של הקובץ</li>
+                    </ul>
+                </div>
+
+                <div class="info-section">
+                    <h3>📊 ביצועי הכלי:</h3>
+                    <ul>
+                        <li>🎯 <strong>דיוק של 87-92%</strong> בבדיקות פנימיות</li>
+                        <li>⚡ <strong>עיבוד מהיר</strong> תוך שניות</li>
+                        <li>📹 כרגע זמין עם 3 סרטוני דוגמה לבדיקה</li>
+                        <li>🔧 בשלבי פיתוח מתקדמים</li>
+                    </ul>
+                </div>
+
+                <div class="warning-section">
+                    <h3>⚠️ הערות חשובות:</h3>
+                    <p>הכלי עדיין חדש ומוגבל, אבל מראה פוטנציאל טוב במאבק נגד תוכן מזויף.</p>
+                    <p>מומלץ להשתמש בו יחד עם שיקול דעת אישי ומקורות מידע נוספים.</p>
+                </div>
+
+                <div style="text-align: center; margin: 30px 0;">
+                    <a href="https://deepguardtech.com" target="_blank" style="background: #dc3545; color: white; padding: 15px 30px; text-decoration: none; border-radius: 25px; font-weight: bold; display: inline-block;">
+                        🔗 נסו את DeepGuard
+                    </a>
+                </div>
+
+                <div class="success-section">
+                    <h3>💡 למה זה חשוב?</h3>
+                    <p>בעידן שבו יוצרים תוכן מזויף בקלות, כלים כמו DeepGuard עוזרים לנו לזהות ולהיזהר מתוכן מטעה.</p>
+                    <p>זה חשוב במיוחד לבדיקת חדשות, תוכן פוליטי או כל סרטון שנראה חשוד.</p>
+                </div>
+            `);
+        }
+
+        function showGuide16() {
+            showModal('🎨 מדריך בסיסי למידג\'רני', `
+                <h2>🎨 מדריך בסיסי למידג'רני</h2>
+
+                <p>מתחילים עם מידג'רני ולא יודעים איך?<br>
+                הכנתי מדריך בסיסי שיעזור לכם לעשות את הצעדים הראשונים! 📚</p>
+
+                <div class="success-section">
+                    <h3>🎯 מה תלמדו במדריך?</h3>
+                    <ul>
+                        <li>איך להתחיל עם Midjourney מההתחלה</li>
+                        <li>איך לכתוב הנחיות (prompts) יעילות</li>
+                        <li>טיפים לקבלת תוצאות טובות יותר</li>
+                        <li>הבנת הפרמטרים השונים</li>
+                        <li>דוגמאות מעשיות ושימושיות</li>
+                    </ul>
+                </div>
+
+                <div class="info-section">
+                    <h3>👨‍🎨 מושלם עבור:</h3>
+                    <ul>
+                        <li>מתחילים שרוצים ללמוד יצירת תמונות AI</li>
+                        <li>מעצבים שרוצים להתנסות בכלים חדשים</li>
+                        <li>יוצרי תוכן שמחפשים השראה ויזואלית</li>
+                        <li>כל מי שמעוניין ביצירה אמנותית דיגיטלית</li>
+                    </ul>
+                </div>
+
+                <div style="text-align: center; margin: 30px 0;">
+                    <a href="https://amirbiron.github.io/Midjourney/" target="_blank" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 20px 40px; text-decoration: none; border-radius: 25px; font-weight: bold; display: inline-block; font-size: 1.1rem;">
+                        🎨 למעבר למדריך המלא
+                    </a>
+                </div>
+
+                <div class="success-section">
+                    <h3>💡 למה Midjourney?</h3>
+                    <p>Midjourney הוא אחד מכלי יצירת התמונות הטובים ביותר באמצעות AI. הוא מתאים במיוחד ליצירת תמונות אמנותיות, עיצובים יצירתיים וכל פרויקט שדורש חזון ויזואלי מיוחד.</p>
+                </div>
+            `);
+        }
+
+        function showGuide17() {
+            showModal('📚 מדריך על המודלים השונים של GPT', `
+                <h2>📚 מדריך על המודלים השונים של GPT</h2>
+                
+                <p>כי לפעמים אנחנו משתמשים במודל שלא מתאים לנו...</p>
+                <p>הכנתי מדריך מפורט על כל מודלי GPT הזמינים, כדי שתדעו בדיוק איזה מודל להשתמש לכל מטרה! 🎯</p>
+
+                <div class="info-section">
+                    <h3>🤔 למה זה חשוב?</h3>
+                    <p>כל מודל GPT מתמחה במשימות שונות. אם תבחרו את המודל הנכון, תקבלו תוצאות טובות יותר ותחסכו כסף!</p>
+                </div>
+
+                <div class="success-section">
+                    <h3>🎯 מה תמצאו במדריך?</h3>
+                    <ul>
+                        <li><strong>GPT-4o</strong> - המודל החדש והמתקדם ביותר</li>
+                        <li><strong>GPT-4 Turbo</strong> - לעבודות מורכבות וארוכות</li>
+                        <li><strong>GPT-4</strong> - המודל הקלאסי החכם</li>
+                        <li><strong>GPT-3.5 Turbo</strong> - מהיר וחסכוני</li>
+                        <li><strong>DALL-E 3</strong> - ליצירת תמונות</li>
+                        <li><strong>Whisper</strong> - להמרת דיבור לטקסט</li>
+                    </ul>
+                </div>
+
+                <div class="step-section">
+                    <h3>💰 השוואת מחירים ויכולות</h3>
+                    <p>במדריך תמצאו טבלה מפורטת שמשווה:</p>
+                    <ul>
+                        <li>מחיר לכל מילה/תמונה</li>
+                        <li>מהירות תגובה</li>
+                        <li>איכות התוצאות</li>
+                        <li>אורך המקסימלי של השיחה</li>
+                        <li>יכולות מיוחדות</li>
+                    </ul>
+                </div>
+
+                <div class="warning-section">
+                    <h3>⚠️ טעויות נפוצות:</h3>
+                    <ul>
+                        <li>❌ משתמשים ב-GPT-4 למשימות פשוטות (יקר מדי)</li>
+                        <li>❌ משתמשים ב-GPT-3.5 למשימות מורכבות (לא מספיק חזק)</li>
+                        <li>❌ לא יודעים על קיום מודלים מיוחדים כמו Code Interpreter</li>
+                    </ul>
+                </div>
+
+                <div style="text-align: center; margin: 30px 0;">
+                    <a href="https://amirbiron.github.io/GPT-Models/" target="_blank" style="background: #00a67e; color: white; padding: 20px 40px; text-decoration: none; border-radius: 25px; font-weight: bold; display: inline-block; font-size: 1.1rem;">
+                        📚 למעבר למדריך המלא
+                    </a>
+                </div>
+
+                <div class="success-section">
+                    <h3>💡 לסיכום:</h3>
+                    <p>בחירת המודל הנכון יכולה לחסוך לכם כסף ולשפר את איכות התוצאות. המדריך יעזור לכם להבין איזה מודל מתאים לכל צורך!</p>
                 </div>
             `);
         }
